--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
       </div>
       <div class="container_11">
         <div class="container_12">
-          <img src="./images/1.svg" alt="" />
-          <img src="./images/2.svg" alt="" />
-          <img src="./images/3.svg" alt="" />
-          <img src="./images/4.svg" alt="" />
+          <img class="img_container_12" src="./images/1.svg" alt="" />
+          <img class="img2_container_12" src="./images/2.svg" alt="" />
+          <img class="img3_container_12" src="./images/3.svg" alt="" />
+          <img class="img4_container_12" src="./images/4.svg" alt="" />
         </div>
         <div class="container_13">
-          <img src="./images/5.svg" alt="" />
-          <img src="./images/6.svg" alt="" />
-          <img src="./images/7.svg" alt="" />
-          <img src="./images/8.svg" alt="" />
+          <img class="img_container_13" src="./images/5.svg" alt="" />
+          <img class="img2_container_13" src="./images/6.svg" alt="" />
+          <img class="img3_container_13" src="./images/7.svg" alt="" />
+          <img class="img4_container_13" src="./images/8.svg" alt="" />
         </div>
       </div>
     </div>
